--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Hobbies</title>
+    <title>my Hobbies</title>
 </head>
 <body>
     <h3> Hobbies</h3>
